#25: fixing margins on mobile breakpoints

--- a/static/scss/assembly_bp1.scss
+++ b/static/scss/assembly_bp1.scss
@@ -119,7 +119,7 @@
 }
 
 .section-bio {
-  padding: rem(60) 0;
+  padding: rem(40) 0 rem(60) 0;
   .thumb-author {
     margin-bottom: rem(60);
   }
