--- a/static/scss/row_header_bp1.scss
+++ b/static/scss/row_header_bp1.scss
@@ -21,6 +21,7 @@
 
 .header-small {
   height: rem(75);
+  margin-bottom: rem(30);
 }
 
 .header-feature {
